<resources>
    <string name="app_name">Android Register And Login</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="comi_bebi_post">COMIDAS BEBIDAS Y POSTRES</string>
    <string name="tienda_ropa">TIENDAS ROPA</string>
    <string name="tiendas_calzado">TIENDAS CALZADO</string>
    <string name="tiendas_varias">TIENDAS VARIAS Y MERCADO</string>
    <string name="hogar_remodelacion">HOGAR Y REMODELACIÓN</string>
    <string name="mascotas_agro">MASCOTAS Y AGRO</string>
    <string name="salud_belleza">SALUD Y BELLEZA</string>
    <string name="transporte">TRANSPORTE CARROS MOTOS Y BICICLETAS</string>
    <string name="mantenimiento">MANTENIMIENTO Y VENTAS</string>
    <string name="servicios_suministros">SERVICIOS Y SUMINISTROS</string>
    <string name="turismo">TURISMO Y DEPORTES</string>
    <string name="dependencias">DEPENDENCIAS ADMINISTRATIVAS</string>
    <string name="dependencias2">Dependencias Administrativas</string>
    <string name="guia">GUIA TURISTICA</string>
    <string name="bares">Bares</string>

    <string name="comida_china">Comida China</string>
    <string name="comida_internacional">Comida Internacional</string>
    <string name="comida_rapida">Comida Rapida</string>
    <string name="comida_tradicional">Comida Tradicional</string>
    <string name="comida_vegetariana">Comida Vegetariana</string>
    <string name="fruterias">Fruterias</string>
    <string name="postres_y_helados">Postres Y Helados</string>
    <string name="comidas_y_postres">COMIDAS BEBIDAS Y POSTRES</string>
</resources>
